// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectsList /> renders properly 1`] = `
<div>
  <section
    class="jsx-982443136 container"
    data-testid="projectsList_section"
  >
    <div
      class="jsx-982443136 wrapper genericMargins"
    >
      <h1
        class="jsx-3155756322 colored"
      >
        Projetos
      </h1>
      <ul
        class="jsx-982443136"
        data-testid="projectsList_noCarousel"
      >
        <li
          class="jsx-4127294762"
        >
          <div
            style="display: inline-block; max-width: 100%; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
          >
            <div
              style="box-sizing: border-box; display: block; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                role="presentation"
                src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNDAwIiBoZWlnaHQ9IjQwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
                style="max-width: 100%; display: block; margin: 0px; padding: 0px;"
              />
            </div>
            <img
              alt="tjela logo"
              decoding="async"
              src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75"
              srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 2x"
              style="visibility: inherit; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </div>
          <div
            class="jsx-4127294762 backface"
          >
            <a
              class="jsx-4127294762 brand link"
              href="https://www.instagram.com/tudonatjela"
              rel="noreferrer"
              target="_blank"
            >
              @tudonatjela
            </a>
            <p
              class="jsx-4127294762 description"
            >
              Gestão de Redes Sociais e Criação de Conteúdo
            </p>
            <p
              class="jsx-4127294762 date"
            >
              2020
               - Presente
            </p>
            <small
              class="jsx-4127294762"
            >
              * 
              em dupla com Sofia Ferreirinho
            </small>
          </div>
        </li>
        <li
          class="jsx-4127294762"
        >
          <div
            style="display: inline-block; max-width: 100%; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
          >
            <div
              style="box-sizing: border-box; display: block; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                role="presentation"
                src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNDAwIiBoZWlnaHQ9IjQwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
                style="max-width: 100%; display: block; margin: 0px; padding: 0px;"
              />
            </div>
            <img
              alt="kaffeehaus logo"
              decoding="async"
              src="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75"
              srcset="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75 2x"
              style="visibility: inherit; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </div>
          <div
            class="jsx-4127294762 backface"
          >
            <a
              class="jsx-4127294762 brand link"
              href="https://www.instagram.com/kaffeehaus_lisboa"
              rel="noreferrer"
              target="_blank"
            >
              @kaffeehaus_lisboa
            </a>
            <p
              class="jsx-4127294762 description"
            >
              Gestão de Redes Sociais e Criação de Conteúdo
            </p>
            <p
              class="jsx-4127294762 date"
            >
              2018
               - Presente
            </p>
          </div>
        </li>
        <li
          class="jsx-4127294762"
        >
          <div
            style="display: inline-block; max-width: 100%; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
          >
            <div
              style="box-sizing: border-box; display: block; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                role="presentation"
                src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNDAwIiBoZWlnaHQ9IjQwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
                style="max-width: 100%; display: block; margin: 0px; padding: 0px;"
              />
            </div>
            <img
              alt="guacamole logo"
              decoding="async"
              src="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=828&q=75"
              srcset="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=828&q=75 2x"
              style="visibility: inherit; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </div>
          <div
            class="jsx-4127294762 backface"
          >
            <a
              class="jsx-4127294762 brand link"
              href="https://www.instagram.com/guacamolegmg"
              rel="noreferrer"
              target="_blank"
            >
              @guacamolegmg
            </a>
            <p
              class="jsx-4127294762 description"
            >
              Gestão de Redes Sociais e Criação de Conteúdo
            </p>
            <p
              class="jsx-4127294762 date"
            >
              2019
               - Presente
            </p>
            <small
              class="jsx-4127294762"
            >
              * 
              em dupla com Sofia Ferreirinho
            </small>
          </div>
        </li>
      </ul>
      <div
        class="jsx-781296904 buttonWrapper"
      >
        <div
          class="jsx-781296904 buttonBackground alignCenter"
        >
          <a
            class="jsx-781296904 button"
            href="/pt/projects"
          >
            Ver mais
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<ProjectsList /> renders properly in English 1`] = `
<div>
  <section
    class="jsx-982443136 container"
    data-testid="projectsList_section"
  >
    <div
      class="jsx-982443136 wrapper genericMargins"
    >
      <h1
        class="jsx-3155756322 colored"
      >
        Projects
      </h1>
      <ul
        class="jsx-982443136"
        data-testid="projectsList_noCarousel"
      >
        <li
          class="jsx-4127294762"
        >
          <div
            style="display: inline-block; max-width: 100%; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
          >
            <div
              style="box-sizing: border-box; display: block; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                role="presentation"
                src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNDAwIiBoZWlnaHQ9IjQwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
                style="max-width: 100%; display: block; margin: 0px; padding: 0px;"
              />
            </div>
            <img
              alt="tjela logo"
              decoding="async"
              src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75"
              srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 2x"
              style="visibility: inherit; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </div>
          <div
            class="jsx-4127294762 backface"
          >
            <a
              class="jsx-4127294762 brand link"
              href="https://www.instagram.com/tudonatjela"
              rel="noreferrer"
              target="_blank"
            >
              @tudonatjela
            </a>
            <p
              class="jsx-4127294762 description"
            >
              Social Media Management and Content Creation
            </p>
            <p
              class="jsx-4127294762 date"
            >
              2020
               - Present
            </p>
            <small
              class="jsx-4127294762"
            >
              * 
              in partnership with Sofia Ferreirinho
            </small>
          </div>
        </li>
        <li
          class="jsx-4127294762"
        >
          <div
            style="display: inline-block; max-width: 100%; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
          >
            <div
              style="box-sizing: border-box; display: block; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                role="presentation"
                src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNDAwIiBoZWlnaHQ9IjQwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
                style="max-width: 100%; display: block; margin: 0px; padding: 0px;"
              />
            </div>
            <img
              alt="kaffeehaus logo"
              decoding="async"
              src="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75"
              srcset="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75 2x"
              style="visibility: inherit; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </div>
          <div
            class="jsx-4127294762 backface"
          >
            <a
              class="jsx-4127294762 brand link"
              href="https://www.instagram.com/kaffeehaus_lisboa"
              rel="noreferrer"
              target="_blank"
            >
              @kaffeehaus_lisboa
            </a>
            <p
              class="jsx-4127294762 description"
            >
              Social Media Management and Content Creation
            </p>
            <p
              class="jsx-4127294762 date"
            >
              2018
               - Present
            </p>
          </div>
        </li>
        <li
          class="jsx-4127294762"
        >
          <div
            style="display: inline-block; max-width: 100%; overflow: hidden; position: relative; box-sizing: border-box; margin: 0px;"
          >
            <div
              style="box-sizing: border-box; display: block; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                role="presentation"
                src="data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iNDAwIiBoZWlnaHQ9IjQwMCIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIiB2ZXJzaW9uPSIxLjEiLz4="
                style="max-width: 100%; display: block; margin: 0px; padding: 0px;"
              />
            </div>
            <img
              alt="guacamole logo"
              decoding="async"
              src="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=828&q=75"
              srcset="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=828&q=75 2x"
              style="visibility: inherit; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </div>
          <div
            class="jsx-4127294762 backface"
          >
            <a
              class="jsx-4127294762 brand link"
              href="https://www.instagram.com/guacamolegmg"
              rel="noreferrer"
              target="_blank"
            >
              @guacamolegmg
            </a>
            <p
              class="jsx-4127294762 description"
            >
              Social Media Management and Content Creation
            </p>
            <p
              class="jsx-4127294762 date"
            >
              2019
               - Present
            </p>
            <small
              class="jsx-4127294762"
            >
              * 
              in partnership with Sofia Ferreirinho
            </small>
          </div>
        </li>
      </ul>
      <div
        class="jsx-781296904 buttonWrapper"
      >
        <div
          class="jsx-781296904 buttonBackground alignCenter"
        >
          <a
            class="jsx-781296904 button"
            href="/pt/projects"
          >
            See more
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;
